--- a/writing/env-var-review.bib
+++ b/writing/env-var-review.bib
@@ -219,7 +219,7 @@
 	editor = {Zuur, Alain F.},
 	year = {2009},
 	note = {OCLC: ocn288985460},
-	keywords = {Ecology, R (Computer program language), Statistical methods},
+	keywords = {R (Computer program language), Ecology, Statistical methods},
 	annote = {Limitations of linear regression applied on ecological data -- Things are not always linear : additive modeling -- Dealing with heterogeneity -- Mixed effects modeling for nested data -- Violation of independence. Part 1 -- Violation of independence. Part 2 -- Meet the exponential family -- GLM and GAM for count data -- GLM and GAM for absence-presence and proportional data -- Zero-truncated and zero-inflated models for count data -- Generalised estimation equations -- GLMM and GAMM -- Estimating trends for Antarctic birds in relation to climate change / A.F. Zuur ... [et al.] -- Large scale impacts of land-use change in a Scottish farming catchment / A.F. Zuur ... [et al.] -- Negative binomial GAM and GAMM to analyse amphibian roadkills / A.F. Zuur ... [et al.] -- Additive mixed modelling applied on deep-sea pelagic bioluminescent organisms / A.F. Zuur ... [et al.] -- Additive mixed modelling applied on phytoplankton time series data / A.F. Zuur ... [et al.] -- Mixed effects modelling applied on American foulbrood affecting honey bees larvae / A.F. Zuur ... [et al.] -- Three-way nested data for age determination techniques applied to cetaceans / E.N. Ieno ... [et al.] -- GLMM applied on the spatial distribution of koalas in a fragmented landscape / J.R. Rhodes ... [et al.] -- A comparison of GLM, GEE, and GLMM applied to badger activity data / N.J. Walker ... [et al.] -- Incorporating temporal correlation in seal abundance data with MCMC / A.A. Saveliev ... [et al.] -- Required pre-knowledge : a linear regression and additive modelling example},
 }
 
@@ -371,7 +371,7 @@
 	publisher = {CRC Press/Taylor \& Francis Group},
 	author = {McElreath, Richard},
 	year = {2016},
-	keywords = {Bayesian statistical decision theory, R (Computer program language)},
+	keywords = {R (Computer program language), Bayesian statistical decision theory},
 	annote = {"A CRC title."},
 }
 
@@ -2355,7 +2355,7 @@
 	editor = {Horn, David J. and Stairs, Gordon R. and Mitchell, Rodger David},
 	year = {1979},
 	note = {Meeting Name: Biosciences Colloquium},
-	keywords = {Congresses, Ecology},
+	keywords = {Ecology, Congresses},
 }
 
 @article{nathan_big-data_2022,
@@ -3137,7 +3137,7 @@
 	pages = {3--36},
 }
 
-@misc{fleming_ctmm_2021,
+@book{fleming_ctmm_2021,
 	title = {ctmm: {Continuous}-{Time} {Movement} {Modeling}},
 	url = {https://github.com/ctmm-initiative/ctmm, https://groups.google.com/g/ctmm-user}},
 	author = {Fleming, Christen H. and Calabrese, Justin M.},
@@ -3218,4 +3218,249 @@
 	month = apr,
 	year = {1986},
 	pages = {413--418},
+}
+
+@article{beever_behavioral_2017,
+	title = {Behavioral flexibility as a mechanism for coping with climate change},
+	volume = {15},
+	issn = {15409295},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/fee.1502},
+	doi = {10.1002/fee.1502},
+	language = {en},
+	number = {6},
+	urldate = {2022-10-05},
+	journal = {Frontiers in Ecology and the Environment},
+	author = {Beever, Erik A and Hall, L Embere and Varner, Johanna and Loosen, Anne E and Dunham, Jason B and Gahl, Megan K and Smith, Felisa A and Lawler, Joshua J},
+	month = aug,
+	year = {2017},
+	pages = {299--308},
+}
+
+@article{sih_evolution_2011,
+	title = {Evolution and behavioural responses to human-induced rapid environmental change: {Behaviour} and evolution},
+	volume = {4},
+	issn = {17524571},
+	shorttitle = {Evolution and behavioural responses to human-induced rapid environmental change},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1752-4571.2010.00166.x},
+	doi = {10.1111/j.1752-4571.2010.00166.x},
+	language = {en},
+	number = {2},
+	urldate = {2022-10-05},
+	journal = {Evolutionary Applications},
+	author = {Sih, Andrew and Ferrari, Maud C. O. and Harris, David J.},
+	month = mar,
+	year = {2011},
+	pages = {367--387},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\USME7XJ4\\Sih et al. - 2011 - Evolution and behavioural responses to human-induc.pdf:application/pdf},
+}
+
+@article{walther_ecological_2002,
+	title = {Ecological responses to recent climate change},
+	volume = {416},
+	issn = {0028-0836, 1476-4687},
+	url = {http://www.nature.com/articles/416389a},
+	doi = {10.1038/416389a},
+	language = {en},
+	number = {6879},
+	urldate = {2022-10-05},
+	journal = {Nature},
+	author = {Walther, Gian-Reto and Post, Eric and Convey, Peter and Menzel, Annette and Parmesan, Camille and Beebee, Trevor J. C. and Fromentin, Jean-Marc and Hoegh-Guldberg, Ove and Bairlein, Franz},
+	month = mar,
+	year = {2002},
+	pages = {389--395},
+}
+
+@article{rogala_human_2011,
+	title = {Human {Activity} {Differentially} {Redistributes} {Large} {Mammals} in the {Canadian} {Rockies} {National} {Parks}},
+	volume = {16},
+	issn = {1708-3087},
+	url = {http://www.ecologyandsociety.org/vol16/iss3/art16/},
+	doi = {10.5751/ES-04251-160316},
+	language = {en},
+	number = {3},
+	urldate = {2022-10-05},
+	journal = {Ecology and Society},
+	author = {Rogala, James Kimo and Hebblewhite, Mark and Whittington, Jesse and White, Cliff A. and Coleshill, Jenny and Musiani, Marco},
+	year = {2011},
+	pages = {art16},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\EPPJRGAY\\Rogala et al. - 2011 - Human Activity Differentially Redistributes Large .pdf:application/pdf},
+}
+
+@article{calabrese_ctmmweb_2021,
+	title = {ctmmweb: {A} {Graphical} {User} {Interface} for {Autocorrelation}‐{Informed} {Home} {Range} {Estimation}},
+	volume = {45},
+	issn = {2328-5540, 2328-5540},
+	shorttitle = {ctmmweb},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/wsb.1154},
+	doi = {10.1002/wsb.1154},
+	language = {en},
+	number = {1},
+	urldate = {2022-10-17},
+	journal = {Wildlife Society Bulletin},
+	author = {Calabrese, Justin M. and Fleming, Christen H. and Noonan, Michael J. and Dong, Xianghui},
+	month = mar,
+	year = {2021},
+	pages = {162--169},
+	file = {Submitted Version:C\:\\Users\\mezzinis\\Zotero\\storage\\UA62A2RK\\Calabrese et al. - 2021 - ctmmweb A Graphical User Interface for Autocorrel.pdf:application/pdf},
+}
+
+@article{hays_flexible_2006,
+	title = {{FLEXIBLE} {FORAGING} {MOVEMENTS} {OF} {LEATHERBACK} {TURTLES} {ACROSS} {THE} {NORTH} {ATLANTIC} {OCEAN}},
+	volume = {87},
+	issn = {0012-9658},
+	url = {http://doi.wiley.com/10.1890/0012-9658(2006)87[2647:FFMOLT]2.0.CO;2},
+	doi = {10.1890/0012-9658(2006)87[2647:FFMOLT]2.0.CO;2},
+	language = {en},
+	number = {10},
+	urldate = {2022-10-17},
+	journal = {Ecology},
+	author = {Hays, Graeme C. and Hobson, Victoria J. and Metcalfe, Julian D. and Righton, David and Sims, David W.},
+	month = oct,
+	year = {2006},
+	pages = {2647--2656},
+}
+
+@article{wheat_migrate_2017,
+	title = {To migrate, stay put, or wander? {Varied} movement strategies in bald eagles ({Haliaeetus} leucocephalus)},
+	volume = {5},
+	issn = {2051-3933},
+	shorttitle = {To migrate, stay put, or wander?},
+	url = {http://movementecologyjournal.biomedcentral.com/articles/10.1186/s40462-017-0102-4},
+	doi = {10.1186/s40462-017-0102-4},
+	language = {en},
+	number = {1},
+	urldate = {2022-10-17},
+	journal = {Movement Ecology},
+	author = {Wheat, Rachel E. and Lewis, Stephen B. and Wang, Yiwei and Levi, Taal and Wilmers, Christopher C.},
+	month = dec,
+	year = {2017},
+	pages = {9},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\UVAIQZIJ\\Wheat et al. - 2017 - To migrate, stay put, or wander Varied movement s.pdf:application/pdf},
+}
+
+@article{reich_body_2001,
+	title = {Body size, geometry, longevity and metabolism: do plant leaves behave like animal bodies?},
+	volume = {16},
+	issn = {01695347},
+	shorttitle = {Body size, geometry, longevity and metabolism},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0169534701023060},
+	doi = {10.1016/S0169-5347(01)02306-0},
+	language = {en},
+	number = {12},
+	urldate = {2022-10-17},
+	journal = {Trends in Ecology \& Evolution},
+	author = {Reich, Peter B.},
+	month = dec,
+	year = {2001},
+	pages = {674--680},
+}
+
+@article{bradsworth_using_2022,
+	title = {Using thresholds to determine priorities for apex predator conservation in an urban landscape},
+	volume = {228},
+	issn = {01692046},
+	url = {https://github.com/ropensci/MODIStsp},
+	doi = {10.1016/j.landurbplan.2022.104559},
+	language = {en},
+	urldate = {2022-10-18},
+	journal = {Landscape and Urban Planning},
+	author = {Bradsworth, Nick and White, John G. and Rendall, Anthony R. and Carter, Nicholas and Whisson, Desley A. and Cooke, Raylene},
+	month = dec,
+	year = {2022},
+	pages = {104559},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\65VCGMDX\\Bradsworth et al. - 2022 - Using thresholds to determine priorities for apex .pdf:application/pdf},
+}
+
+@book{hijmans_raster_2022,
+	title = {raster: {Geographic} {Data} {Analysis} and {Modeling}},
+	url = {https://CRAN.R-project.org/package=raster},
+	author = {Hijmans, Robert J.},
+	year = {2022},
+	annote = {R package version 3.6-3},
+}
+
+@article{busetto_modistsp_2016,
+	title = {{MODIStsp} : {An} {R} package for automatic preprocessing of {MODIS} {Land} {Products} time series},
+	volume = {97},
+	issn = {00983004},
+	shorttitle = {{MODIStsp}},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0098300416303107},
+	doi = {10.1016/j.cageo.2016.08.020},
+	language = {en},
+	urldate = {2022-11-04},
+	journal = {Computers \& Geosciences},
+	author = {Busetto, L. and Ranghetti, L.},
+	month = dec,
+	year = {2016},
+	pages = {40--48},
+	file = {Submitted Version:C\:\\Users\\mezzinis\\Zotero\\storage\\YRJY8MMV\\Busetto and Ranghetti - 2016 - MODIStsp  An R package for automatic preprocessin.pdf:application/pdf},
+}
+
+@article{pebesma_simple_2018,
+	title = {Simple {Features} for {R}: {Standardized} {Support} for {Spatial} {Vector} {Data}},
+	volume = {10},
+	issn = {2073-4859},
+	shorttitle = {Simple {Features} for {R}},
+	url = {https://journal.r-project.org/archive/2018/RJ-2018-009/index.html},
+	doi = {10.32614/RJ-2018-009},
+	language = {en},
+	number = {1},
+	urldate = {2022-11-04},
+	journal = {The R Journal},
+	author = {Pebesma, Edzer},
+	year = {2018},
+	pages = {439},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\K7R5MT8K\\Pebesma - 2018 - Simple Features for R Standardized Support for Sp.pdf:application/pdf},
+}
+
+@book{wickham_dplyr_2022,
+	title = {dplyr: {A} {Grammar} of {Data} {Manipulation}},
+	url = {https://CRAN.R-project.org/package=dplyr},
+	author = {Wickham, Hadley and François, Romain and Henry, Lionel and Müller, Kirill},
+	year = {2022},
+	annote = {R package version 1.0.10},
+}
+
+@book{henry_purrr_2022,
+	title = {purrr: {Functional} {Programming} {Tools}},
+	url = {https://CRAN.R-project.org/package=purrr},
+	author = {Henry, Lionel and Wickham, Hadley},
+	year = {2022},
+	annote = {R package version 0.3.5},
+}
+
+@book{wickham_tidyr_2022,
+	title = {tidyr: {Tidy} {Messy} {Data}},
+	url = {https://CRAN.R-project.org/package=tidyr},
+	author = {Wickham, Hadley and Girlich, Maximilian},
+	year = {2022},
+	annote = {R package version 1.2.1},
+}
+
+@article{grolemund_dates_2011,
+	title = {Dates and {Times} {Made} {Easy} with lubridate},
+	volume = {40},
+	url = {https://www.jstatsoft.org/v40/i03/},
+	number = {3},
+	journal = {Journal of Statistical Software},
+	author = {Grolemund, Garrett and Wickham, Hadley},
+	year = {2011},
+	pages = {1--25},
+}
+
+@book{wickham_ggplot2_2016,
+	title = {ggplot2: {Elegant} {Graphics} for {Data} {Analysis}},
+	isbn = {978-3-319-24277-4},
+	url = {https://ggplot2.tidyverse.org},
+	publisher = {Springer-Verlag New York},
+	author = {Wickham, Hadley},
+	year = {2016},
+}
+
+@book{wilke_cowplot_2020,
+	title = {cowplot: {Streamlined} {Plot} {Theme} and {Plot} {Annotations} for 'ggplot2'},
+	url = {https://CRAN.R-project.org/package=cowplot},
+	author = {Wilke, Claus O.},
+	year = {2020},
+	annote = {R package version 1.1.1},
 }
