--- a/writing/appendix-1-simulations.Rmd
+++ b/writing/appendix-1-simulations.Rmd
@@ -15,6 +15,8 @@ institute:
   - tapir: Lowland Tapir Conservation Initiative (LTCI), Instituto de Pesquisas Ecológicas (IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960‑000, Brazil.
   - iucn: IUCN SSC Tapir Specialist Group (TSG), Campo Grande, Brazil.
   - escas: Escola Superior de Conservação Ambiental E Sustentabilidade (ESCAS/IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960‑000, Brazil.
+bibliography: 'env-var-review.bib'
+csl: 'the-american-naturalist.csl'
 fontsize: 12pt
 header-includes:
     - \usepackage{indentfirst} # for indenting first line of each paragraph
@@ -33,11 +35,13 @@ output:
 
 <!-- set default code chunk options -->
 
-```{r, echo=FALSE}
+```{r, echo=TRUE}
 knitr::opts_chunk$set(eval = FALSE,    # do not run R code
                       echo = TRUE,     # print R code
                       message = FALSE, # hide messages
-                      comment = '')    # don't add anything before outputs
+                      comment = '',    # don't add anything before outputs
+                      cache = TRUE)    # cache all chunk outputs
+knitr::opts_knit$set(root.dir = '..')
 ```
 
 <!-- add custom commands for formulae -->
@@ -67,31 +71,42 @@ knitr::opts_chunk$set(eval = FALSE,    # do not run R code
 This appendix illustrates all the steps necessary to produce the simulation figures in the main manuscript. For ease of reference, we also include the figures here (Figures \@ref(fig:5-5-sims) and \@ref(fig:5-5-reg)). To achieve full transparency while minimizing computational times, the code illustrated in this pdf is not executed during the knitting of the document. Instead, the R Markdown document (`writing/appendix-1-simulations.Rmd`) contains code chunks that import the `RDS` files saved by the scripts used during the analysis via `R` code that is not printed in the pdf file. Although one can replicate the analyses by running the code in this pdf, we suggest only using this document for illustrative purposes and as a general guide. We suggest using the `R` scripts to replicate the simulations, instead.
 
 ```{r 5-5-sims, eval=TRUE, echo=FALSE, fig.cap="Simulated spatial requirements for animals living in habitats where the mean and variance in resource availability ($R$) are constant, linearly increasing, cyclical, drifting, or erratic over time. The bottom line indicates the animal's core home range (0.5 quantile), while the top line indicates the 0.95 utilization quantile. Note how both quantiles decrease nonlinearly as $\\e(R)$ increases, and they increase approximately linearly as $\\var(R)$ increases. Additionally, the variance in both quantiles is higher when $\\var(R)$ is higher, and changes in $\\var(R)$ have greater impacts when $\\e(R)$ is low.\nSimulations were run such that animals followed the same 100 tracks at each time point starting from the point $\\langle 0, 0\\rangle$ until they reach satiety, at which point they returned to $\\langle 0, 0\\rangle$ over the same amount of time. The animal's spatial variance parameter was then calculated using an Ornstein-Uhlenbeck Foraging (OUF) model via the $\\tt{ctmm}$ package", out.width='100%'}
-knitr::include_graphics('../figures/mean-variance-5-by-5-hr-sims.png')
+knitr::include_graphics('H:/GitHub/env-var-review/figures/mean-variance-5-by-5-hr-sims.png',
+                        rel_path = FALSE)
 ```
 
 ```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated spatial requirements. The relationships were estimated using a Generalized Linear Model with a Gamma family. The thicker bottom line indicates the relationships with the animal's core home range (0.5 quantile), while the thinner top line indicates the relationship with the 0.95 utilization quantile. Note the nonlinear decrease in both utilization quantiles as $\\e(R)$ increases and the nonlineear increase in both utilization quantiles as $\\var(R)$ increases.", out.width='100%'}
-knitr::include_graphics('../figures/simulation-regression-plots.png')
+knitr::include_graphics('H:/GitHub/env-var-review/figures/simulation-regression-plots.png',
+                        rel_path = FALSE)
 ```
 
 \newpage
 
 # Simulating the movement tracks
 
-To reduce sampling variance between simulations, we use the same set of simulated tracks for each time point in each panel (figure \@ref(fig:sims-example)). In the `analysis/simulations/tracks.R` script, we generate $2^{10} = 1024$ tracks to check how many tracks are necessary to obtain stable home range estimates in the best- and worst-case scenarios. Most intermediate and diagnostic checks included in the `R` scripts are not included in this document for the sake of brevity and simplicity.
+To reduce sampling variance between simulations, we use the same set of simulated tracks for each time point in each panel (figure \@ref(fig:sims-example)). In the `analysis/simulations/tracks.R` script, we generate $2^{10} = 1024$ tracks to check how many tracks are necessary to obtain stable home range estimates in the best- and worst-case scenarios. Most intermediate and diagnostic checks included in the `R` scripts are not included in this document for the sake of brevity and simplicity. In this script, we use the `ctmm` package [version 1.1.0, @fleming_ctmm_2021] for movement modeling, the `raster` package [version 3.6-3, @hijmans_raster_2022] to work with the simulated resource rasters, the `dplyr` [version 1.0.10, @wickham_dplyr_2022], `purrr` [version 0.3.5, @henry_purrr_2022], and `tidyr` [version 1.2.1, @wickham_tidyr_2022] packages for data wrangling, and the the `ggplot2` [version 3.4.0, @wickham_ggplot2_2016] and `cowplot` [version 1.1.1, @wilke_cowplot_2020] packages for plotting.
 
 ```{r sims-example, echo=FALSE, eval=TRUE, fig.cap="Overview of how animals' spatial needs were simulated. (a.) Animal tracks were simulated using an infinitely diffusive movement model starting from the point $\\langle 0, 0 \\rangle$ (black and yellow square). (b.) Each time the track crossed into a new cell (green dots), the animal collected a random amount of resources that followed a Gamma distribution with common mean $\\mu (t)$ and variance $\\sigma^2 (t)$. (c.) Each time the animal collected more resources, its satiety (purple) increased. Once the animal collected sufficient resources, the animal stopped moving (i.e., the track was truncated). (d.) The process was repeated 100 times (13 tracks pictured in this panel). (e.) The final set of (truncated) tracks was then modeled using Ornstein-Uhlenbeck Foraging models to estimate the 95\\% and 50\\% home range estimates using Autocorrelated Kernel Density Estimates.", out.width='100%', fig.pos='!h'}
-knitr::include_graphics('../figures/simulation-example.png')
+knitr::include_graphics('H:/GitHub/env-var-review/figures/simulation-example.png',
+                        rel_path = FALSE)
 ```
 
 ```{r simulate-tracks, eval=TRUE}
-# NOTE: change your working directory to be "env-var-review/writing", or
-# modify all file paths as needed
+# NOTE: change your working directory to "env-var-review" or modify file paths
+
+# attach all necessary packages
 library('ctmm')   # for generating movement models and movement modeling
 library('raster') # for working with raster data
 library('dplyr')  # for data wrangling
 library('purrr')  # for functional programming
-source('../functions/label_visits.R') # decides when animal encounters food
+library('tidyr')   # for data wrangling (e.g., nested tibbles)
+library('ggplot2') # for fancy plots
+
+source('functions/rgamma2.R') # rgamma() parameterized by mean and variance
+source('analysis/figures/mean-variance-trends-panel-data.R') # means & variances
+source('analysis/movement-model.R') # for consistency across scripts
+source('functions/get_hr.R') # for extracting gaussian home range
+source('functions/label_visits.R') # decides when animal encounters food
 
 DELTA_T <- 60 # sampling interval in seconds
 SAMPLES <- seq(0, 60 * 60 * 12, by = DELTA_T) # 12h every DELTA_T seconds
@@ -158,7 +173,8 @@ Using three tracks generated using three arbitrary seeds (1, 2, and 3), we explo
 **Exploratory plot \@ref(fig:dt-sensitivity)d.** The three tracks used for these exploratory plots are sufficiently different that we considered them to be a representative sample of movement tracks simulated by the OUF model. All three tracks have a reasonable amount of tortuous movement and directed movement. 
 
 ```{r dt-sensitivity, fig.cap="Exploratory plots used to decide an appropriate sampling interval. (a.) Histograms of the number of encounters as a function of the interval between encounters, with a binwith of 30 seconds. Although some encounters occur with less than 30 seconds between them, most of them occur at least 60 seconds apart. (b.) Number of encounters with food detected as a function of sampling interval. The colored lines indicate the estimated relationship based on a Generalized Additive Model fit using the $\\tt{geom\\_smooth}$ function from the $\\tt{ggplot2}$ package. Although the number of encounters detected decreases as sampling interval doubles, the loss at 30 seconds is negligible. (c.) Beginning of the track generated with seed \"1\" (purple line) with the location of each sample for different sampling intervals. Red dots indicate samples where the animal remained in the same cell, while the blue squares indicate when an animal was in a new cell, and thus encountered food. While the number of encounters detected decreases as the sampling interval increases, most of the encounters lost at $\\Delta t = 30$s occured because the animal remained almost adjacent to the borders between cells. (d.) The three tracks used in these tests over the raster used to determine when the animals encountered food.", out.width='100%', echo=FALSE, eval=TRUE}
-knitr::include_graphics('../figures/thinning-examples.png')
+knitr::include_graphics('H:/GitHub/env-var-review/figures/thinning-examples.png',
+                        rel_path = FALSE)
 ```
 
 \newpage
@@ -168,15 +184,6 @@ knitr::include_graphics('../figures/thinning-examples.png')
 Script: `analysis/hr-simulation-extreme-scenarios.R`
 
 ```{r}
-library('ctmm')    # for continuous-time movement modeling
-library('dplyr')   # for data wrangling (e.g., %>%)
-library('tidyr')   # for data wrangling (e.g., nested tibbles)
-library('ggplot2') # for fancy plots
-source('functions/rgamma2.R') # rgamma() parameterized by mean and variance
-source('analysis/figures/mean-variance-trends-panel-data.R') # means & variances
-source('analysis/simulations/movement-model.R') # for consistency across scripts
-source('functions/get_hr.R') # for extracting gaussian home range
-theme_set(theme_bw())
 set.seed(1) # for consistent results
 
 tels <- readRDS('simulations/tracks.rds') # list of telemetry tracks
@@ -335,8 +342,9 @@ p_hr_days <-
   scale_y_log10(expression(Estimated~home~range~(log[10]~scale))); p_hr_days
 ```
 
-```{r, eval=TRUE, echo=FALSE, fig.cap="Caption."}
-knitr::include_graphics('../figures/hr-over-days.png')
+```{r, eval=TRUE, echo=FALSE, fig.cap="Estimated spatial needs as a function of the number of days sampled for an animal in a habitat with the highest $\\e(R)$ and lowest $\\var(R)$ (left) and an animal with the lowest $\\e(R)$ and highest $\\var(R)$ (right). In both cases, 100 days are sufficient to produce stable estimates of spatial needs."}
+knitr::include_graphics('H:/GitHub/env-var-review/figures/hr-over-days.png',
+                        rel_path = FALSE)
 ```
 
 
@@ -346,3 +354,7 @@ knitr::include_graphics('../figures/hr-over-days.png')
 3. $\tt{analysis/simulations/hr-mean-variance-simulations-days-summarized.R}$
 4. $\tt{analysis/simulations/hr-mean-variance-simulations-modeling.R}$
 5. $\tt{analysis/simulations/hr-mean-variance-simulations-hrs.R}$
+
+\clearpage
+
+# References {-}
